# gmo-coin-fx-rs

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  artifacts.plan.yaml  contracts.template.yaml  guard.sidecar.yaml  placement.rules.yaml  policy.profile.yaml  project.baton.yaml
.github/: dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  labels.yml  release-drafter.yml  release.yml
crates/application-risk/: Cargo.toml
crates/application-risk/src/: journal.rs  lib.rs
crates/client/: Cargo.toml
crates/client/examples/: private_api.rs  public_api.rs
crates/client/src/: lib.rs
crates/client/src/auth/: auth_signer.contract.yaml  auth_signer.prompt.md  mod.rs
crates/client/src/gateway/: gmo_fx_gateway.contract.yaml  gmo_fx_gateway.prompt.md  gmo_fx_gateway.rs  mod.rs
crates/client/src/policy/: mod.rs  rate_limit_policy.contract.yaml  rate_limit_policy.prompt.md  spread_guard.contract.yaml  spread_guard.prompt.md  spread_guard.rs
crates/client/src/rest/: mod.rs  private_rest_client.contract.yaml  private_rest_client.rs  public_rest_client.contract.yaml  public_rest_client.prompt.md  public_rest_client.rs
crates/client/tests/: rest_client_tests.rs
crates/core/: Cargo.toml
crates/core/src/: api_error.contract.yaml  api_error.prompt.md  api_error.rs  error.rs  lib.rs
crates/core/src/models/: account_models.contract.yaml  account_models.rs  common.rs  execution.rs  market_models.contract.yaml  market_models.rs  mod.rs  order_models.contract.yaml  order_models.rs  position.rs  symbol.rs  ws.rs  ws_events.rs
crates/domain-risk/: Cargo.toml
crates/domain-risk/src/: error.rs  leverage.contract.yaml  leverage.prompt.md  leverage.rs  lib.rs  margin.contract.yaml  margin.prompt.md  margin.rs  position_size.contract.yaml  position_size.prompt.md  position_size.rs  risk_guard.contract.yaml  risk_guard.prompt.md  risk_guard.rs  types.rs
crates/domain-risk/tests/: fx_risk_calculations.rs  risk_property_tests.rs
crates/gmo-coin-fx-client/: Cargo.toml
crates/gmo-coin-fx-client/src/: lib.rs
crates/gmo-coin-fx-client/src/auth/: auth_signer.contract.yaml  auth_signer.rs  mod.rs
crates/gmo-coin-fx-client/src/gateway/: gmo_fx_gateway.contract.yaml  gmo_fx_gateway.rs  mod.rs
crates/gmo-coin-fx-client/src/policy/: rate_limit_policy.contract.yaml  rate_limit_policy.rs
crates/gmo-coin-fx-client/src/rest/: mod.rs  private_rest_client.contract.yaml  private_rest_client.prompt.md  private_rest_client.rs  public_rest_client.contract.yaml  public_rest_client.rs
crates/gmo-coin-fx-core/: Cargo.toml
crates/gmo-coin-fx-core/src/: api_error.contract.yaml  error.rs  lib.rs
crates/gmo-coin-fx-core/src/models/: account.rs  account_models.contract.yaml  account_models.prompt.md  account_models.rs  execution.rs  market.rs  market_models.contract.yaml  market_models.prompt.md  market_models.rs  mod.rs  order.rs  order_models.contract.yaml  order_models.prompt.md  order_models.rs  ws.rs
crates/gmo-coin-fx-ws/: Cargo.toml
crates/gmo-coin-fx-ws/examples/: websocket.rs
crates/gmo-coin-fx-ws/src/: lib.rs  private.rs  private_websocket_events.contract.yaml  private_websocket_events.prompt.md  private_websocket_events.rs  public.rs  websocket_auth.contract.yaml  websocket_auth.rs
crates/infrastructure-broker/: Cargo.toml
crates/ws/: Cargo.toml
crates/ws/examples/: websocket.rs
crates/ws/src/: lib.rs  private.rs  private_websocket_events.contract.yaml  public.rs  reconnect.rs  websocket_auth.contract.yaml  websocket_auth.prompt.md
crates/ws/tests/: websocket_client_tests.rs
docs/: risk-calculation.md  symbol_migration.md
examples/: ticker.rs
scripts/: bump-version.sh  tag-release.sh
