[package]
name = "gmo-coin-fx-application-risk"
version = "0.3.55"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gmo-coin-fx-domain-risk = { path = "../domain-risk" }
gmo-coin-fx-client = { path = "../client" }
gmo-coin-fx-core = { path = "../core" }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
