[package]
name = "gmo-coin-fx-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core domain models and authentication for the GMO Coin FX API"
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json = "1.0"
