[package]
name = "gmo-coin-fx-ws"
version = "0.3.58"
edition.workspace = true
license.workspace = true
description = "WebSocket client for the GMO Coin FX API with auto-reconnect and event deserialization"
repository.workspace = true

[dependencies]
futures-util = "0.3"
gmo-coin-fx-core = { path = "../core" }
gmo-coin-fx-client = { path = "../client" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "time", "sync", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2.5"

[features]
default = []
chrono = ["gmo-coin-fx-core/chrono"]

[dev-dependencies]
wiremock = "=0.6.5"

